refactor: codereview index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body id="top-link">
-
+    <!-- **** #header **** -->
     <header class="header-bg" id="header">
         <div class="container header">
             <div class="header__info info">
@@ -29,7 +29,6 @@
                     <a href="#reservation" class="btn btn--color">Reservation</a>
                 </div>
             </div>
-
             <div class="header__nav">
                 <button class="hamburger-menu-toggle"><span class="visually-hidden">Menu</span></button>
                 <nav class="nav" id="header-navigation">
@@ -56,9 +55,7 @@
         </div>
     </header>
 
-
-
-
+    <!-- **** #hero **** -->
     <section class="hero-bg">
         <div class="container hero">
             <div class="hero__text">
@@ -76,9 +73,7 @@
         </div>
     </section>
 
-
-
-
+    <!-- **** #infotmation **** -->
     <section class="information-bg">
         <div class="container information">
             <div class="information__block">
@@ -115,27 +110,22 @@
         </div>
     </section>
 
-
-
-
+    <!-- **** #storytelling **** -->
     <section class="storytelling-bg" id="storytelling">
         <div class="container storytelling">
             <div class="storytelling__img">
                 <img src="./assets/images/storytelling-img.jpg" alt="tables in restaurant">
             </div>
-
             <div class="storytelling__text">
                 <h2>The Delicious Story</h2>
                 <p>The people, food and the prime locations make the perfect place for the friends & family to come
                     together and have great time.</p>
-
                 <div class="storytelling__block">
                     <span>2018</span>
                     <p>Plan for this restaurant to deliver healthy food.</p>
                     <span>2022</span>
                     <p>Happily in the fourth year by fulfill the motto.</p>
                 </div>
-
                 <div class="storytelling__autograph">
                     <img src="./assets/icons/autograph.png" alt="autograph">
                 </div>
@@ -143,8 +133,7 @@
         </div>
     </section>
 
-
-
+    <!-- **** #menu **** -->
     <section class="menu-bg" id="menu">
         <div class="container menu">
             <div class="menu__card">
@@ -196,8 +185,6 @@
                         </div>
                     </div>
                 </div>
-
-
                 <div class="menu__category">
                     <h3>Main Dish</h3>
                     <div class="menu__item item">
@@ -235,9 +222,6 @@
                         </div>
                     </div>
                 </div>
-
-
-
                 <div class="menu__category">
                     <h3>Dessert</h3>
                     <div class="menu__item item">
@@ -261,7 +245,7 @@
         </div>
     </section>
 
-
+    <!-- **** #testimonial **** -->
     <section class="testimonial-bg">
         <div class="container testimonial">
             <div class="section-heading testimonial__heading">
@@ -291,8 +275,6 @@
                                 </p>
                             </div>
                         </div>
-
-
                         <div class="testimonial__card itc-slider-item">
                             <div class="testimonial__autor autor">
                                 <div class="autor__photo">
@@ -310,8 +292,6 @@
                                 </p>
                             </div>
                         </div>
-
-
                         <div class="testimonial__card itc-slider-item">
                             <div class="testimonial__autor autor">
                                 <div class="autor__photo">
@@ -340,7 +320,7 @@
     </section>
 
 
-
+    <!-- **** #offers **** -->
     <section class="offers-bg" id="offers">
         <div class="container offers">
             <div class="section-heading offers__heading">
@@ -350,7 +330,6 @@
                     are in
                     offers use it based on hunger.</p>
             </div>
-
             <div class="offers__block">
                 <div class="offers__deal">
                     <div class="section-heading offers__text">
@@ -366,7 +345,6 @@
                         <img src="./assets/images/offers-burger-img.png" alt="tasty burger">
                     </div>
                 </div>
-
                 <div class="offers__deal">
                     <div class="section-heading offers__text">
                         <div class="offers__price">
@@ -385,8 +363,7 @@
         </div>
     </section>
 
-
-
+    <!-- **** #gallery **** -->
     <section class="gallery-bg">
         <div class="container gallery">
             <div class="section-heading gallery__heading">
@@ -396,7 +373,6 @@
                     each table fastest.
                     That led to attempting the Guinness Record.</p>
             </div>
-
             <div class="gallery__block">
                 <div class="gallery__card">
                     <div class="gallery__img">
@@ -410,7 +386,6 @@
                         <p>Dish relished by all age groups as a starter dish at parties.</p>
                     </div>
                 </div>
-
                 <div class="gallery__card">
                     <div class="gallery__img">
                         <img src="./assets/images/dishes-img-02.jpg" alt="Hotdog">
@@ -423,7 +398,6 @@
                         <p>Grilled sausage served in the slit of a partially sliced bun.</p>
                     </div>
                 </div>
-
                 <div class="gallery__card">
                     <div class="gallery__img">
                         <img src="./assets/images/dishes-img-03.jpg" alt="Fresh Salmon">
@@ -436,7 +410,6 @@
                         <p>Beat the health blues with our Super Immune Blue Juice Recipe.</p>
                     </div>
                 </div>
-
                 <div class="gallery__card">
                     <div class="gallery__img">
                         <img src="./assets/images/dishes-img-04.jpg" alt="Veg Burger">
@@ -450,15 +423,13 @@
                     </div>
                 </div>
             </div>
-
             <div class="gallery__btn">
                 <button class="btn btn--border">See all dishes</button>
             </div>
         </div>
     </section>
 
-
-
+    <!-- **** #advantages **** -->
     <section class="advantages-bg">
         <div class="container advantages">
             <div class="section-heading advantages__heading">
@@ -467,7 +438,6 @@
                 <p>The atmosphere set the stage. It’s about more than just a dining room away from your home. Food takes
                     the spotlight as guests.</p>
             </div>
-
             <div class="advantages__block">
                 <div class="advantages__card">
                     <img src="./assets/icons/calendar-icon.png" alt="calendar">
@@ -485,7 +455,7 @@
         </div>
     </section>
 
-
+    <!-- **** #blog **** -->
     <section class="blog-bg" id="blog">
         <div class="container blog">
             <div class="section-heading blog__heading">
@@ -493,7 +463,6 @@
                 <h2>Be First Who Read News</h2>
                 <p>Explore the latest stories about our dishes, offers, events and future plans here.</p>
             </div>
-
             <div class="blog__block">
                 <div class="blog__preview">
                     <div class="blog__btn">
@@ -508,7 +477,6 @@
                             the creative activity to beta test override the food quality.</p>
                     </div>
                 </div>
-
                 <div class="blog__preview">
                     <div class="blog__btn">
                         <img src="./assets/images/blog-img-02.jpg" alt="barbecue">
@@ -526,8 +494,7 @@
         </div>
     </section>
 
-
-
+    <!-- **** #reservation **** -->
     <section class="reservation-bg" id="reservation">
         <div class="container">
             <div class="reservation">
@@ -544,8 +511,7 @@
         </div>
     </section>
 
-
-
+    <!-- **** #subscribe **** -->
     <section class="subscribe-bg">
         <div class="container subscribe">
             <img src="./assets/icons/logo.png" alt="logo" class="subscribe__logo">
@@ -557,8 +523,7 @@
         </div>
     </section>
 
-
-
+    <!-- **** #footer **** -->
     <footer class="footer-bg" id="footer">
         <div class="container footer">
             <div class="footer__contact">
@@ -586,33 +551,10 @@
                 </ul>
             </div>
         </div>
-
-
-
     </footer>
-
-
     <a href="#top-link" class="arrow-up"><img src="./assets/icons/top-link.png" alt="top arrow"></a>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
     <script src="./script.js"></script>
     <script src="./itc-slider.js" defer></script>
-
 </body>
-
 </html>
