refactor: validate index.html and correct errors

--- a/index.html
+++ b/index.html
@@ -499,12 +499,12 @@
         <div class="container">
             <div class="reservation">
                 <span class="section-heading__title">Reservation</span>
+                <h2>Book Your Table</h2>
                 <form class="reservation__form form" action="#">
-                    <legend>Book Your Table</legend>
-                    <input type="text" name="text" id="#" placeholder="Name">
-                    <input type="email" name="email" id="#" placeholder="Email">
-                    <input type="number" name="number" id="#" min="1" max="50" step="1" placeholder="Persons">
-                    <input type="date" name="date" id="#" placeholder="Date">
+                    <input type="text" name="text" placeholder="Name">
+                    <input type="email" name="email" placeholder="Email">
+                    <input type="number" name="number" min="1" max="50" step="1" placeholder="Persons">
+                    <input type="date" name="date">
                     <input type="submit" value="Book A Table" class="btn btn--submit">
                 </form>
             </div>
@@ -515,9 +515,10 @@
     <section class="subscribe-bg">
         <div class="container subscribe">
             <img src="./assets/icons/logo.png" alt="logo" class="subscribe__logo">
+            <h2 class="hi">Subscribe</h2>
             <p class="subscribe__text">Join our mailing list for updates, Get news & offers events.</p>
             <form action="#" class="subscribe__form">
-                <input class="subscribe__email" type="email" name="email" id="#" placeholder="Email"
+                <input class="subscribe__email" type="email" name="email" placeholder="Email"
                     maxlength="30"><input type="submit" value="Subscribe" class="btn btn--submit subscribe__btn">
             </form>
         </div>
@@ -557,4 +558,5 @@
     <script src="./script.js"></script>
     <script src="./itc-slider.js" defer></script>
 </body>
+
 </html>
