--- a/index.html
+++ b/index.html
@@ -253,68 +253,68 @@
                 <h2>Our clients say</h2>
                 <p>We love to hear from customers, so please leave a comment or say hello in an email.</p>
             </div>
-
-            <div class="itc-slider" data-slider="itc-slider" data-loop="true">
-                <div class="itc-slider-wrapper">
-                    <div class="testimonial__block itc-slider-items">
-                        <div class="testimonial__card itc-slider-item">
-                            <div class="testimonial__autor autor">
-                                <div class="autor__photo">
-                                    <img src="./assets/images/testimonial-autor-01.png" alt="Natasha D photo">
-                                </div>
-                                <div class="autor__name">
-                                    <h4>Natasha D</h4>
-                                    <span>Newyork</span>
-                                </div>
+            <div>
+                <div class="testimonial__block slider-container">
+                    <div class="testimonial__card">
+                        <div class="autor">
+                            <div class="autor__photo">
+                                <img src="./assets/images/testimonial-autor-01.png" alt="Natasha D photo">
                             </div>
-                            <div class="testimonial__text">
-                                <p>
-                                    They known for its fabulous taste and food. Anywhere you go your hunger is
-                                    satisfied. The
-                                    best chicken & burgers those are yummy.
-                                </p>
+                            <div class="autor__name">
+                                <h4>Natasha D</h4>
+                                <span>Newyork</span>
                             </div>
                         </div>
-                        <div class="testimonial__card itc-slider-item">
-                            <div class="testimonial__autor autor">
-                                <div class="autor__photo">
-                                    <img src="./assets/images/testimonial-autor-02.png" alt="Jack Sparrow photo">
-                                </div>
-                                <div class="autor__name">
-                                    <h4>Jack Sparrow</h4>
-                                    <span>Salt Lake City</span>
-                                </div>
+                        <div class="autor__text">
+                            <p>
+                                They known for its fabulous taste and food. Anywhere you go your hunger is
+                                satisfied. The
+                                best chicken & burgers those are yummy.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="testimonial__card">
+                        <div class="autor">
+                            <div class="autor__photo">
+                                <img src="./assets/images/testimonial-autor-02.png" alt="Jack Sparrow photo">
                             </div>
-                            <div class="testimonial__text">
-                                <p>
-                                    I have visited this fantastic restaurant on several occasions, food is absolutely
-                                    outstanding & attention to detail is in league of its own.
-                                </p>
+                            <div class="autor__name">
+                                <h4>Jack Sparrow</h4>
+                                <span>Chikago</span>
                             </div>
                         </div>
-                        <div class="testimonial__card itc-slider-item">
-                            <div class="testimonial__autor autor">
-                                <div class="autor__photo">
-                                    <img src="./assets/images/testimonial-autor-03.png" alt="Martin photo">
-                                </div>
-                                <div class="autor__name">
-                                    <h4>Martin</h4>
-                                    <span>San Diego</span>
-                                </div>
+                        <div class="autor__text">
+                            <p>
+                                I have visited this fantastic restaurant on several occasions, food is absolutely
+                                outstanding & attention to detail is in league of its own.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="testimonial__card">
+                        <div class="autor">
+                            <div class="autor__photo">
+                                <img src="./assets/images/testimonial-autor-03.png" alt="Martin photo">
                             </div>
-                            <div class="testimonial__text">
-                                <p>
-                                    Perfectly known for its fabulous taste and food. Anywhere your hunger is satisfied.
-                                    They
-                                    give best fried chicken and burgers those are yummy.
-                                </p>
+                            <div class="autor__name">
+                                <h4>Martin</h4>
+                                <span>San Diego</span>
                             </div>
+                        </div>
+                        <div class="autor__text">
+                            <p>
+                                Perfectly known for its fabulous taste and food. Anywhere your hunger is satisfied.
+                                They
+                                give best fried chicken and burgers those are yummy.
+                            </p>
                         </div>
                     </div>
                 </div>
-                <button class="itc-slider-btn itc-slider-btn-prev"></button>
-                <button class="itc-slider-btn itc-slider-btn-next"></button>
             </div>
+            <div class="testimonial__btns">
+                <button class="prev-btn">prev</button>
+                <button class="next-btn">next</button>
+            </div>
+        </div>
         </div>
         <div class="testimonial__img"></div>
     </section>
@@ -518,8 +518,8 @@
             <h2 class="hi">Subscribe</h2>
             <p class="subscribe__text">Join our mailing list for updates, Get news & offers events.</p>
             <form action="#" class="subscribe__form">
-                <input class="subscribe__email" type="email" name="email" placeholder="Email"
-                    maxlength="30"><input type="submit" value="Subscribe" class="btn btn--submit subscribe__btn">
+                <input class="subscribe__email" type="email" name="email" placeholder="Email" maxlength="30"><input
+                    type="submit" value="Subscribe" class="btn btn--submit subscribe__btn">
             </form>
         </div>
     </section>
